# easyFSM

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  test_lib.cpp
assets/: demo.mov
docs/: app.js  index.html  style.css  traffic_light_wasm.js  traffic_light_wasm.wasm
examples/elevator/: CMakeLists.txt  example_elevator.cpp
examples/elevator/include/controllers/: elevator_controller.h
examples/elevator/include/factories/: elevator_factory.h
examples/elevator/include/handlers/: elevator_action_handler.h
examples/elevator/include/models/: elevator_states.h  elevator_timings.h
examples/elevator/include/services/: elevator_console_display_service.h
examples/elevator/include/utils/: elevator_enum_utils.h
examples/elevator/src/controllers/: elevator_controller.cpp
examples/elevator/src/factories/: elevator_factory.cpp
examples/elevator/src/models/: elevator_events.cpp
examples/elevator/src/services/: elevator_console_display_service.cpp
examples/elevator/src/utils/: elevator_enum_utils.cpp
examples/traffic_light/: CMakeLists.txt  example_traffic.cpp
examples/traffic_light/include/controllers/: traffic_light_controller.h
examples/traffic_light/include/factories/: traffic_light_factory.h
examples/traffic_light/include/handlers/: traffic_light_action_handler.h
examples/traffic_light/include/models/: light_timings.h  traffic_context.h  traffic_events.h  traffic_states.h
examples/traffic_light/include/services/: ascii_display_service.h  console_display_service.h
examples/traffic_light/include/utils/: traffic_enum_utils.h
examples/traffic_light/src/factories/: traffic_light_factory.cpp
examples/traffic_light/src/models/: traffic_events.cpp  traffic_states.cpp
examples/traffic_light_observer/: CMakeLists.txt  example_observer.cpp
examples/traffic_light_observer/include/controllers/: traffic_controller.h
examples/traffic_light_observer/include/observers/: console_logger_observer.h  display_observer.h  file_logger_observer.h  pedestrian_observer.h  timer_observer.h
examples/traffic_light_observer/src/observers/: console_logger_observer.cpp  display_observer.cpp  file_logger_observer.cpp  pedestrian_observer.cpp  timer_observer.cpp
examples/traffic_light_threaded/: CMakeLists.txt  example_traffic_threaded.cpp
examples/traffic_light_threaded/include/utils/: traffic_executor.h
examples/traffic_light_threaded/src/utils/: traffic_executor.cpp
include/: action_handler.h  base_controller.h  console_display_service.h  display_serivce.h  function_timer_service.h  runtime_state_machine.h  services.h  state_context.h  state_transition.h  system_events.h  traffic_light_action_handler.h  traffic_light_controller.h  traffic_light_transition.h  traffic_states.h
include/controllers/: base_controller.h  elevator_controller.h  traffic_light_controller.h
include/factories/: elevator_factory.h  traffic_light_factory.h
include/implementations/handlers/: elevator_action_handler.h  traffic_light_action_handler.h
include/implementations/services/: ascii_display_service.h  console_display_service.h  elevator_console_display_service.h
include/implementations/state_machines/: runtime_state_machine.h
include/implementations/transitions/: conditional_state_transation.h  simple_state_transition.h  traffic_light_transition.h
include/interfaces/: action_handler.h  display_service.h  state_machine.h  state_transition.h  timer_service.h
include/models/: elevator_context.h  elevator_events.h  traffic_events.h
include/utils/: enum_utils.h
lib/: CMakeLists.txt
lib/include/state_machine/: state_machine.h
lib/include/state_machine/core/: action_handler.h  base_controller.h  observable_controller.h  state_machine.h  state_transition.h  subject.h
lib/include/state_machine/implementations/: conditional_state_transition.h  runtime_state_machine.h  simple_state_transition.h
lib/include/state_machine/services/: display_service.h  function_timer_service.h  timer_service.h
lib/src/services/: function_timer_service.cpp
src/: base_controller.cpp  console_display_service.cpp  main.cpp  runtime_state_machine.cpp  services.cpp  system_events.cpp  traffic_light_action_handler.cpp  traffic_light_controller.cpp  traffic_light_transition.cpp
src/controllers/: base_controller.cpp  traffic_light_controller.cpp
src/factories/: elevator_factory.cpp  traffic_light_factory.cpp
src/implementations/handlers/: elevator_action_handler.cpp  traffic_light_action_handler.cpp
src/implementations/services/: ascii_display_service.cpp  console_display_service.cpp  function_timer_service.cpp
src/implementations/transitions/: simple_state_transition.cpp
src/models/: elevator_events.cpp  elevator_states.cpp  system_events.cpp  traffic_states.cpp
src/utils/: enum_utils.cpp  traffic_enum_utils.cpp
